front-end/src/app/create-exercise/create-exercise.page.scss
.background{
  --background: var(--ion-off-white);
}

.back{
  --color: var(--ion-color-tertiary);
  --background-activated: var(--ion-color-secondary);
  --color-activated: var(--ion-color-primary);
  --background-hover: var(--ion-color-secondary);
  --color-hover: var(--ion-color-primary);
  text-decoration: underline;
}

.header{
  --background: var(--ion-color-secondary);
}

.input-div{
  display: block;
  width: 300px;
  margin-left: auto;
  margin-right: auto;
}

#selected{
  display: none;
}

.title {
  color: var(--ion-color-tertiary);
}

.kenzo-input{
  font-family: "SF Pro Regular", serif;
  display: block;
  height: 50px;
  border-radius: 9px;
  background-color: white;
  color: var(--ion-color-tertiary);
  --padding-start: 10px;
  --padding-top: 15px;
  border: solid 0.5px var(--ion-color-tertiary);
}

.input-description{
  font-family: "SF Pro Medium", serif;
  display: block;
  color: var(--ion-color-tertiary);
  padding-left: 5px;
  padding-bottom: 5px;
  font-weight: 500;
}

.required{
  font-family: "SF Pro Medium", serif;
  display: block;
  color: var(--ion-color-primary);
  padding-left: 5px;
  padding-bottom: 5px;
  font-weight: 500;
}

.radios{
  --background: var(--ion-off-white);
  --color: var(--ion-color-tertiary);
  --background-activated: var(--ion-off-white);
  --color-hover: var(--ion-color-primary);
}

.submit{
  width: var(--button-width);
  display: block;
  --background-activated: var(--ion-color-tertiary);
  --color-activated: var(--ion-color-primary);
  --background-hover: var(--ion-color-tertiary);
  --color-hover: var(--ion-color-primary);
  margin: 20px auto;
}

.footer{
  --background: var(--ion-off-white);
  border: none;
}

.imagePose{
  height: 50px;
  width: 100%;
  object-fit: cover;
}

ion-slides{
  --progress-bar-background: none;
  --progress-bar-background-activated: none;
  --bullet-background-active: var(--ion-color-tertiary);
  --bullet-background: var(--ion-color-KT_BLACK);
}

